fix layout shift on scroll and change font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,8 @@
   }
 
   html {
-    /* scrollbar-gutter: stable; */
+    scrollbar-gutter: stable;
+    scrollbar-color: #030712 #111827;
   }
 
   body {
